zetasql/analyzer/testdata/differential_privacy_max_rows_contributed.test
# max_rows_contributed added to differential privacy options
# Should not cause any compilation errors.
[default language_features=DIFFERENTIAL_PRIVACY,NAMED_ARGUMENTS]
[default enabled_ast_rewrites=DEFAULTS,+ANONYMIZATION]
select with differential_privacy options(max_rows_contributed = 5)
count(*)
from SimpleTypesWithAnonymizationUid a
--
QueryStmt
+-output_column_list=
| +-$aggregate.$agg1#13 AS `$col1` [INT64]
+-query=
  +-ProjectScan
    +-column_list=[$aggregate.$agg1#13]
    +-input_scan=
      +-DifferentialPrivacyAggregateScan
        +-column_list=[$aggregate.$agg1#13]
        +-input_scan=
        | +-TableScan(table=SimpleTypesWithAnonymizationUid, alias="a")
        +-aggregate_list=
        | +-$agg1#13 :=
        |   +-AggregateFunctionCall(ZetaSQL:$differential_privacy_count_star(optional(1) STRUCT<INT64, INT64> contribution_bounds_per_group) -> INT64)
        |     +-Literal(type=STRUCT<INT64, INT64>, value=NULL)
        +-option_list=
          +-max_rows_contributed := Literal(type=INT64, value=5)

[REWRITTEN AST]
QueryStmt
+-output_column_list=
| +-$aggregate.$agg1#13 AS `$col1` [INT64]
+-query=
  +-ProjectScan
    +-column_list=[$aggregate.$agg1#13]
    +-input_scan=
      +-DifferentialPrivacyAggregateScan
        +-column_list=[$aggregate.$agg1#13]
        +-input_scan=
        | +-AggregateScan
        |   +-column_list=[$aggregate.$agg1_partial#16, $group_by.$uid#17]
        |   +-input_scan=
        |   | +-TableScan(column_list=[SimpleTypesWithAnonymizationUid.uid#14], table=SimpleTypesWithAnonymizationUid, column_index_list=[10], alias="a")
        |   +-group_by_list=
        |   | +-$uid#17 := ColumnRef(type=INT64, column=SimpleTypesWithAnonymizationUid.uid#14)
        |   +-aggregate_list=
        |     +-$agg1_partial#16 := AggregateFunctionCall(ZetaSQL:$count_star() -> INT64)
        +-aggregate_list=
        | +-$agg1#13 :=
        | | +-AggregateFunctionCall(ZetaSQL:$differential_privacy_sum(INT64, optional(1) STRUCT<INT64, INT64> contribution_bounds_per_group) -> INT64)
        | |   +-ColumnRef(type=INT64, column=$aggregate.$agg1_partial#16)
        | |   +-Literal(type=STRUCT<INT64, INT64>, value=NULL)
        | +-$group_selection_threshold_col#20 :=
        |   +-AggregateFunctionCall(ZetaSQL:$differential_privacy_sum(INT64, optional(1) STRUCT<INT64, INT64> contribution_bounds_per_group) -> INT64)
        |     +-Literal(type=INT64, value=1)
        |     +-Literal(type=STRUCT<INT64, INT64>, value={0, 1})
        +-group_selection_threshold_expr=
        | +-ColumnRef(type=INT64, column=$differential_privacy.$group_selection_threshold_col#20)
        +-option_list=
          +-max_rows_contributed := Literal(type=INT64, value=5)

[TableScan Groups]
{
  TableScan(column_list=[SimpleTypesWithAnonymizationUid.uid#14], table=SimpleTypesWithAnonymizationUid, column_index_list=[10], alias="a")
}
==

# Invalid max_rows_contributed, specified twice
[language_features=DIFFERENTIAL_PRIVACY,NAMED_ARGUMENTS]
[default enabled_ast_rewrites=DEFAULTS,+ANONYMIZATION]
select with differential_privacy options(max_rows_contributed = 5, MAX_ROWS_CONTRIBUTED = 5)
count(*)
from SimpleTypesWithAnonymizationUid a
--
ERROR: Duplicate differential privacy option specified for 'MAX_ROWS_CONTRIBUTED' [at 1:68]
...options(max_rows_contributed = 5, MAX_ROWS_CONTRIBUTED = 5)
                                     ^
==

# Invalid max_rows_contributed, because max_groups_contributed is also specified
[default enabled_ast_rewrites=DEFAULTS,+ANONYMIZATION]
select with differential_privacy options(max_rows_contributed = 5, max_groups_contributed = 3)
count(*)
from SimpleTypesWithAnonymizationUid a
--
ERROR: At most one of the options max_groups_contributed or max_rows_contributed may be specified in differential privacy options, instead got: max_groups_contributed, max_rows_contributed [at 1:41]
select with differential_privacy options(max_rows_contributed = 5, max_groups...
                                        ^
==

# Invalid max_rows_contributed, because max_groups_contributed is also specified
[language_features=DIFFERENTIAL_PRIVACY,NAMED_ARGUMENTS,ANONYMIZATION_CASE_INSENSITIVE_OPTIONS]
[default enabled_ast_rewrites=DEFAULTS,+ANONYMIZATION]
select with differential_privacy options(MAX_ROWS_CONTRIBUTED = 5, MAX_GROUPS_CONTRIBUTED = 2)
count(*)
from SimpleTypesWithAnonymizationUid a
--
ERROR: At most one of the options max_groups_contributed or max_rows_contributed may be specified in differential privacy options, instead got: max_groups_contributed, max_rows_contributed [at 1:41]
select with differential_privacy options(MAX_ROWS_CONTRIBUTED = 5, MAX_GROUPS...
                                        ^
